# otelib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tasks.py  test_pythonbackend.ipynb
.github/: dependabot.yml
.github/utils/: docker-compose.yml  release_tag_msg.txt  requirements_audit.txt  single_dependency_pr_body.txt
.github/workflows/: cd_release.yml  ci_automerge_dependabot.yml  ci_cd_updated_master.yml  ci_check_dependencies.yml  ci_dependabot.yml  ci_tests.yml
docs/demo-notebooks/: excecute-compevo.ipynb  execute.ipynb
docs/figs/: filters.drawio
docs/img/: filters.drawio
otelib/: __init__.py  abc.py  abstractfilter.py  apierror.py  client.py  dataresource.py  exceptions.py  execute.ipynb  filter.py  mapping.py  ontotransserver.py  pipe.py  server.py  settings.py  transformation.py  utils.py  warnings.py
otelib/backends/: client.py  factories.py  python.py  services.py  strategies.py  utils.py
otelib/backends/clients/: __init__.py  python.py  service.py
otelib/backends/python/: __init__.py  base.py  client.py  dataresource.py  filter.py  function.py  mapping.py  parser.py  transformation.py
otelib/backends/services/: __init__.py  abc.py  base.py  client.py  dataresource.py  filter.py  function.py  mapping.py  parser.py  transformation.py
otelib/clients/: python.py
otelib/strategies/: __init__.py  abc.py  dataresource.py  filter.py  function.py  mapping.py  transformation.py
src/: abstractfilter.py  apierror.py  dataresource.py  excecute-compevo.ipynb  execute.ipynb  filter.py  mapping.py  models.py  ontotransserver.py  pipe.py  transformation.py
tests/: conftest.py  test_config.py  test_dataresource.py  test_ontotransserver.py  test_oteclient.py  test_oteclient_python.py  test_oteclient_services.py  test_pipe.py  test_pipe_python.py  test_pipe_services.py  utils.py
tests/static/: sample.json
tests/strategies/: conftest.py  test_abc.py  test_all_strategies.py  test_dataresource.py  test_filter.py  test_function.py  test_generic_tests.py  test_mapping.py  test_transformation.py
tests/strategies_python/: test_dataresource.py  test_python_abc.py  test_python_dataresource.py  test_python_filter.py  test_python_function.py  test_python_mapping.py  test_python_transformation.py
tests/strategies_services/: test_abc.py  test_dataresource.py  test_filter.py  test_function.py  test_mapping.py  test_transformation.py
