[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "otelib"
authors = [
    {name = "SINTEF", email = "TEAM4.0@SINTEF.no"},
]
description = "Open Translation Environment (OTE) REST API client library."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Framework :: OTE-API",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["OTE", "OTE-API"]
requires-python = "~=3.10"
dynamic = ["version"]

dependencies = [
    "oteapi-core >=1.0.0",
    "pydantic-settings ~=2.8",
]

[project.optional-dependencies]
dev = [
    "pre-commit ~=4.2",
    "pytest ~=8.3",
    "pytest-cov ~=6.1",
    "requests-mock ~=1.12",
]

[project.urls]
Home = "https://github.com/EMMC-ASBL/otelib"
Documentation = "https://EMMC-ASBL.github.io/otelib"
Source = "https://github.com/EMMC-ASBL/otelib"
"Issue Tracker" = "https://github.com/EMMC-ASBL/otelib/issues"
Changelog = "https://github.com/EMMC-ASBL/otelib/blob/master/CHANGELOG.md"
Package = "https://pypi.org/project/otelib"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "ARG",  # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "ICN",  # flake8-import-conventions
  "G",  # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "PYI",  # flake8-pyi
]
ignore = [
  "PLR",  # Design related pylint codes
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "T20"  # print-statements
]

[tool.pytest.ini_options]
minversion = "8"
addopts = "-rs --cov=otelib --cov-report=term-missing:skip-covered --no-cov-on-fail"
filterwarnings = [
    # Treat any warning as an error.
    "error",

    # A local warning emitted during tests.
    "ignore:.*No global cache used.*:UserWarning",

    # In Python 3.10+ the `SelectableGroups` dict interface is deprecated,
    # which is used in OTEAPI-Core for handling the entry points.
    "ignore:.*SelectableGroups dict interface is deprecated.*:DeprecationWarning",
]
requests_mock_case_sensitive = true
